# xerosploit_python3

./: MANIFEST.in  PIPX_USAGE.md  README.md  banner.py  install.py  install_pipx.sh  pyproject.toml  requirements.txt  setup.py  test_installation.py  xerosploit.py
